chore(release): save version v1.0.7 (Car route, selection mirror, image resolver)

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="wrap">
-            <h1>Koobs • Smart Order</h1><a href="/cashier">Cashier</a><a href="/drive-thru">Drive‑Thru</a><small>Use ?tenant=&lt;UUID&gt; to pin a tenant. Otherwise the first tenant is used on pages that need it.</small>
+            <h1>Koobs • Smart Order</h1><a href="/cashier">Cashier</a><a href="/drive">Car</a><small>Use ?tenant=&lt;UUID&gt; to pin a tenant. Otherwise the first tenant is used on pages that need it.</small>
         </div>
     </body>
 </html>
