--- a/public/drive-thru.html
+++ b/public/drive-thru.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Koobs · Drive‑Thru</title>
+  <title>Koobs · Car</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/public/css/style.css?v=1.0.1">
@@ -59,6 +59,6 @@
     </div>
   </div>
 
-  <script type="module" src="/public/js/drive-thru.js?v=1.0.4" defer></script>
+  <script type="module" src="/public/js/drive-thru.js?v=1.0.7" defer></script>
 </body>
 </html>
