--- a/public/cashier-new.html
+++ b/public/cashier-new.html
@@ -7,13 +7,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/public/css/style.css?v=1.0.1">
+  <script src="/public/js/device-activation.js?v=1.0.10" data-role="cashier" defer></script>
 </head>
 <body>
   <header class="topbar">
     <img class="logo" src="/public/images/koobs-logo.png" alt="koobs" />
-    <div class="live-pill">
+    <div class="live-pill" id="linkPill">
       <span class="dot" aria-hidden="true"></span>
-      <span class="label">LIVE - Fouz</span>
+      <span class="label" id="linkStatus">READY</span>
     </div>
   </header>
 
@@ -59,6 +60,6 @@
     </div>
   </div>
 
-<script src="/public/js/cashier-complete.js?v=1.0.7" defer></script>
+<script src="/public/js/cashier-complete.js?v=1.0.10" defer></script>
 </body>
 </html>
