--- a/public/cashier-new.html
+++ b/public/cashier-new.html
@@ -7,12 +7,29 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/public/css/style.css?v=1.0.1">
-  <script src="/public/js/device-activation.js?v=1.0.10" data-role="cashier" defer></script>
+  <script src="/public/js/device-activation.js?v=1.0.18" data-role="cashier" defer></script>
 </head>
 <body>
   <header class="topbar">
+    <style>
+      .glass-wrap{ display:flex; align-items:center; gap:10px; }
+      .glass-btn{ appearance:none; border:none; border-radius:999px; padding:8px 12px; font-weight:700; cursor:pointer; color:#0b1220; box-shadow: inset 0 0 14px rgba(255,255,255,0.6), 0 4px 12px rgba(0,0,0,0.25); background:linear-gradient(180deg,rgba(255,255,255,0.85),rgba(255,255,255,0.55)); border:1px solid rgba(255,255,255,0.6); }
+      .glass-btn.green{ background:linear-gradient(180deg,#2dd36f,#22c55e); color:#0b1220; border-color:#16a34a; }
+      .glass-btn.orange{ background:linear-gradient(180deg,#fbbf24,#f59e0b); color:#0b1220; border-color:#d97706; }
+      .glass-btn.red{ background:linear-gradient(180deg,#f87171,#ef4444); color:#fff; border-color:#dc2626; }
+      .osn-badge{ margin-left:8px; padding:4px 8px; border-radius:6px; background:#1f2937; color:#fff; font-size:12px; border:1px solid #334155; }
+      .pay-btn{ margin-top:8px; width:100%; padding:10px 12px; border-radius:8px; background:#22c55e; color:#0b1220; font-weight:700; border:1px solid #16a34a; cursor:pointer; }
+    </style>
     <img class="logo" src="/public/images/koobs-logo.png" alt="koobs" />
-    <div class="live-pill" id="linkPill">
+    <div class="glass-wrap">
+      <div class="live-pill" id="linkPill">
+        <span class="dot" aria-hidden="true"></span>
+        <span class="label" id="linkStatus">READY</span>
+      </div>
+      <button id="btnPlay" class="glass-btn orange" title="Start session">▶ Play</button>
+      <button id="btnStop" class="glass-btn red" style="display:none;" title="Stop session">■ Stop</button>
+      <span id="osnBadge" class="osn-badge" style="display:none;">OSN-00000</span>
+    </div>
       <span class="dot" aria-hidden="true"></span>
       <span class="label" id="linkStatus">READY</span>
     </div>
@@ -38,6 +55,7 @@
           <footer class="billFoot">
             <div class="row total"><span>Total</span><span id="grandTotal">0.000 KWD</span></div>
           </footer>
+          <button id="payBtn" class="pay-btn" type="button">Pay</button>
         </div>
       </div>
     </section>
@@ -60,6 +78,6 @@
     </div>
   </div>
 
-<script src="/public/js/cashier-complete.js?v=1.0.10" defer></script>
+<script src="/public/js/cashier-complete.js?v=1.0.18" defer></script>
 </body>
 </html>
