--- a/public/drive-thru.html
+++ b/public/drive-thru.html
@@ -7,7 +7,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/public/css/style.css?v=1.0.1">
-  <style>.osn-header{ margin-right:8px; padding:2px 6px; border-radius:6px; background:#111827; color:#fff; font-size:12px; border:1px solid #334155; display:inline-block; }</style>
+  <style>
+    .osn-header{ margin-right:8px; padding:2px 6px; border-radius:6px; background:#111827; color:#fff; font-size:12px; border:1px solid #334155; display:inline-block; }
+    /* Fullscreen poster overlay shown when not connected */
+    #posterOverlay { position: fixed; inset: 0; z-index: 9999; display: flex; align-items: center; justify-content: center; background: #000 url('/public/images/koobs-bg.png') center center / cover no-repeat; }
+  </style>
   <script src="/public/js/device-activation.js?v=1.0.20" data-role="display" defer></script>
 </head>
 <body>
@@ -18,6 +22,9 @@
       <span class="label" id="linkStatus">READY</span>
     </div>
   </header>
+
+  <!-- Poster overlay covers the entire screen until RTC is connected -->
+  <div id="posterOverlay" aria-hidden="true"></div>
 
   <main class="canvas">
     <!-- UPPER STRIP -->
@@ -61,6 +68,6 @@
     </div>
   </div>
 
-<script type="module" src="/public/js/drive-thru.js?v=1.0.22" defer></script>
+<script type="module" src="/public/js/drive-thru.js?v=1.0.24" defer></script>
 </body>
 </html>
