--- a/public/drive-thru.html
+++ b/public/drive-thru.html
@@ -10,7 +10,9 @@
   <style>
     .osn-header{ margin-right:8px; padding:2px 6px; border-radius:6px; background:#111827; color:#fff; font-size:12px; border:1px solid #334155; display:inline-block; }
     /* Fullscreen poster overlay shown when not connected */
-    #posterOverlay { position: fixed; inset: 0; z-index: 9999; display: flex; align-items: center; justify-content: center; background: #000 url('/public/images/koobs-bg.png') center center / cover no-repeat; }
+    #posterOverlay { position: fixed; inset: 0; z-index: 9999; display: flex; align-items: center; justify-content: center; background: #000; }
+    #posterOverlay img { position: absolute; inset: 0; width: 100%; height: 100%; object-fit: cover; opacity: 0; transition: opacity 600ms ease; }
+    #posterOverlay img.visible { opacity: 1; }
   </style>
   <script src="/public/js/device-activation.js?v=1.0.20" data-role="display" defer></script>
 </head>
@@ -24,7 +26,10 @@
   </header>
 
   <!-- Poster overlay covers the entire screen until RTC is connected -->
-  <div id="posterOverlay" aria-hidden="true"></div>
+  <div id="posterOverlay" aria-hidden="true">
+    <img id="posterImgA" alt="poster" />
+    <img id="posterImgB" alt="poster" />
+  </div>
 
   <main class="canvas">
     <!-- UPPER STRIP -->
