--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -21,32 +21,89 @@
       <button class="btn primary create-doc">+ Create doc</button>
 
       <nav class="menu" role="tree">
-        <!-- Company Space with app panels -->
+        <!-- Dashboard -->
         <div class="menu-section open" data-section>
-          <button class="menu-head" role="treeitem" aria-expanded="true" aria-controls="sec-company">
+          <button class="menu-head" role="treeitem" aria-expanded="true" aria-controls="sec-dashboard" data-panel="panel-dashboard">
             <span class="chev">▾</span>
-            <span class="icon"></span>
-            <span class="label">Company Space</span>
+            <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 3h8v8H3V3zm10 0h8v5h-8V3zM3 13h5v8H3v-8zm7 4h11v4H10v-4z"/></svg></span>
+            <span class="label">Dashboard</span>
           </button>
-          <div class="menu-body" id="sec-company">
-            <a id="navSuper" class="menu-item active" href="#" data-panel="panel-super"><span class="dot"></span><span class="label">Super Admin</span></a>
-            <a id="navMarketing" class="menu-item" href="#" data-panel="panel-marketing"><span class="dot"></span><span class="label">Marketing</span></a>
-            <a id="navCompany" class="menu-item" href="#" data-panel="panel-company"><span class="dot"></span><span class="label">Company Profile</span></a>
-            <a id="navProducts" class="menu-item" href="#" data-panel="panel-products"><span class="dot"></span><span class="label">Products</span></a>
+          <div class="menu-body" id="sec-dashboard"></div>
+        </div>
+
+        <!-- Super Admin (platform only) -->
+        <div class="menu-section open" id="secSuper" data-section>
+          <button class="menu-head" role="treeitem" aria-expanded="true" aria-controls="sec-super">
+            <span class="chev">▾</span>
+            <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2l8 4v6c0 5-3.5 9.7-8 10-4.5-.3-8-5-8-10V6l8-4zm0 2.2L6 6v5.8c0 4.1 2.9 8 6 8.2 3.1-.2 6-4.1 6-8.2V6l-6-1.8z"/></svg></span>
+            <span class="label">Super Admin</span>
+          </button>
+          <div class="menu-body" id="sec-super">
+            <a id="navTenants" class="menu-item" href="#" data-panel="panel-super">
+              <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M16 11c1.7 0 3-1.3 3-3S17.7 5 16 5s-3 1.3-3 3 1.3 3 3 3zM8 11c1.7 0 3-1.3 3-3S9.7 5 8 5 5 6.3 5 8s1.3 3 3 3zm0 2c-2.3 0-7 1.2-7 3.5V19h14v-2.5C15 14.2 10.3 13 8 13zm8 0c-.3 0-.6 0-1 .1 1.2.9 2 2.1 2 3.4V19h7v-2.5C24 14.2 19.3 13 16 13z"/></svg></span>
+              <span class="label">Tenants</span>
+            </a>
+            <a id="navBilling" class="menu-item" href="#" data-panel="panel-super-billing">
+              <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 5h18a1 1 0 011 1v3H2V6a1 1 0 011-1zm-1 7h20v6a1 1 0 01-1 1H3a1 1 0 01-1-1v-6zm3 3h4v2H5v-2z"/></svg></span>
+              <span class="label">Billing</span>
+            </a>
           </div>
         </div>
 
-        <!-- Example extra section (collapsed by default) -->
-        <div class="menu-section" data-section>
-          <button class="menu-head" role="treeitem" aria-expanded="false" aria-controls="sec-ops">
-            <span class="chev">▸</span>
-            <span class="icon"></span>
-            <span class="label">Operations</span>
+        <!-- Menu (collapsible) -->
+        <div class="menu-section open" data-section>
+          <button class="menu-head" role="treeitem" aria-expanded="true" aria-controls="sec-menu">
+            <span class="chev">▾</span>
+            <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 7h18v2H3V7zm0 4h18v2H3v-2zm0 4h12v2H3v-2z"/></svg></span>
+            <span class="label">Menu</span>
           </button>
-          <div class="menu-body" id="sec-ops" hidden>
-            <a class="menu-item" href="#"><span class="dot"></span><span class="label">Staffing</span></a>
-            <a class="menu-item" href="#"><span class="dot"></span><span class="label">Vendors</span></a>
-            <a class="menu-item" href="#"><span class="dot"></span><span class="label">Logistics</span></a>
+          <div class="menu-body" id="sec-menu">
+            <a id="navCategories" class="menu-item" href="#" data-panel="panel-categories">
+              <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M10 4H4v6h6V4zm10 0h-6v6h6V4zM10 14H4v6h6v-6zm10 0h-6v6h6v-6z"/></svg></span>
+              <span class="label">Categories</span>
+            </a>
+            <a id="navProducts" class="menu-item" href="#" data-panel="panel-products">
+              <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M21 16V8a2 2 0 00-1-1.73l-7-4a2 2 0 00-2 0l-7 4A2 2 0 003 8v8a2 2 0 001 1.73l7 4a2 2 0 002 0l7-4A2 2 0 0021 16zM12 3.84L18.74 8 12 12.16 5.26 8 12 3.84zM5 9.47l6 3.69v6.99l-6-3.43V9.47zm8 10.68v-6.99l6-3.69v6.25l-6 3.43z"/></svg></span>
+              <span class="label">Products</span>
+            </a>
+            <a id="navModifiers" class="menu-item" href="#" data-panel="panel-modifiers">
+              <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M5 7h14v2H5V7zm0 4h10v2H5v-2zm0 4h14v2H5v-2z"/></svg></span>
+              <span class="label">Modifiers</span>
+            </a>
+          </div>
+        </div>
+
+        <!-- Manage -->
+        <div class="menu-section open" data-section>
+          <button class="menu-head" role="treeitem" aria-expanded="true" aria-controls="sec-manage">
+            <span class="chev">▾</span>
+            <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M19.14 12.94a7.001 7.001 0 01-1.2 2.07l1.06 1.84-1.41 1.41-1.84-1.06a7.001 7.001 0 01-2.07 1.2L12 21h-2l-.68-2.6a7.001 7.001 0 01-2.07-1.2l-1.84 1.06-1.41-1.41 1.06-1.84a7.001 7.001 0 01-1.2-2.07L3 12V10l2.6-.68a7.001 7.001 0 011.2-2.07L5.74 5.41 7.15 4l1.84 1.06a7.001 7.001 0 012.07-1.2L12 3h2l.68 2.6a7.001 7.001 0 012.07 1.2L18.6 5.74 20 7.15l-1.06 1.84a7.001 7.001 0 011.2 2.07L21 12v2l-1.86-1.06zM12 8a4 4 0 100 8 4 4 0 000-8z"/></svg></span>
+            <span class="label">Manage</span>
+          </button>
+          <div class="menu-body" id="sec-manage">
+            <a id="navCompany" class="menu-item" href="#" data-panel="panel-company">
+              <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 12a5 5 0 100-10 5 5 0 000 10zm0 2c-4 0-8 2-8 5v1h16v-1c0-3-4-5-8-5z"/></svg></span>
+              <span class="label">Profile</span>
+            </a>
+          </div>
+        </div>
+
+        <!-- Marketing -->
+        <div class="menu-section open" data-section>
+          <button class="menu-head" role="treeitem" aria-expanded="true" aria-controls="sec-marketing">
+            <span class="chev">▾</span>
+            <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 10l15-7v18l-5-3-10 5V10z"/></svg></span>
+            <span class="label">Marketing</span>
+          </button>
+          <div class="menu-body" id="sec-marketing">
+            <a id="navPosters" class="menu-item" href="#" data-panel="panel-posters">
+              <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M21 19V5a2 2 0 00-2-2H5a2 2 0 00-2 2v14l4-4h12a2 2 0 002-2z"/></svg></span>
+              <span class="label">Posters</span>
+            </a>
+            <a id="navMessages" class="menu-item" href="#" data-panel="panel-messages">
+              <span class="icon"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M4 4h16v10H5.17L4 15.17V4zm0 12h5v4l4-4h7v4H4v-4z"/></svg></span>
+              <span class="label">Messages</span>
+            </a>
           </div>
         </div>
       </nav>
@@ -71,8 +128,28 @@
     </header>
 
     <main class="main">
-      <!-- Super Admin Panel -->
-      <section id="panel-super" class="panel show">
+      <!-- Dashboard Panel (default) -->
+      <section id="panel-dashboard" class="panel show">
+        <h2 class="page-title">Dashboard</h2>
+        <section class="card">
+          <div class="body">
+            <h3>Quick Status</h3>
+            <div class="grid cols-3 mt-2">
+              <div class="chip">Brand <span id="dbBrandName">—</span></div>
+              <div class="chip">Tenant ID <span id="dbTenantId">—</span></div>
+              <div class="chip">Selected Tenant <span id="dbTenantName">—</span></div>
+            </div>
+            <div class="grid cols-3 mt-3">
+              <div class="card"><div class="body"><strong>Active Machines</strong><div id="dbActiveDevices" class="mt-2">-</div></div></div>
+              <div class="card"><div class="body"><strong>Online Displays</strong><div id="dbDisplaysOnline" class="mt-2">-</div></div></div>
+              <div class="card"><div class="body"><strong>Active Sessions</strong><div id="dbSessionsActive" class="mt-2">Coming soon</div></div></div>
+            </div>
+          </div>
+        </section>
+      </section>
+
+      <!-- Super Admin Panel (Tenants) -->
+      <section id="panel-super" class="panel">
         <h2 class="page-title">Super Admin</h2>
         <section class="card">
           <div class="body">
@@ -144,9 +221,27 @@
         </section>
       </section>
 
-      <!-- Marketing Panel -->
-      <section id="panel-marketing" class="panel">
-        <h2 class="page-title">Marketing</h2>
+      <!-- Super Admin Billing Panel -->
+      <section id="panel-super-billing" class="panel">
+        <h2 class="page-title">Billing</h2>
+        <section class="card">
+          <div class="body">
+            <h3>License</h3>
+            <div class="grid cols-3 mt-2">
+              <div class="chip">Usage <span id="licenseUsageBilling">-</span></div>
+              <label class="flex center">License limit <input id="licenseLimitBilling" class="input" type="number" min="1" style="max-width:120px; margin-left:8px;" /></label>
+              <button id="saveLicenseBilling" class="btn">Save Limit</button>
+            </div>
+            <div class="mt-3">
+              <span class="badge">Invoices — coming soon</span>
+            </div>
+          </div>
+        </section>
+      </section>
+
+      <!-- Marketing: Posters -->
+      <section id="panel-posters" class="panel">
+        <h2 class="page-title">Posters</h2>
         <section class="card">
           <div class="body">
             <h3>Rotating Posters</h3>
@@ -157,10 +252,14 @@
             <div id="posterGrid" class="grid cols-4"></div>
           </div>
         </section>
+      </section>
 
-        <section class="card mt-4">
+      <!-- Marketing: Messages -->
+      <section id="panel-messages" class="panel">
+        <h2 class="page-title">Messages</h2>
+        <section class="card">
           <div class="body">
-            <h3>Marketing Text / Display Banner</h3>
+            <h3>Display Banner &amp; Featured</h3>
             <div class="grid cols-2 mt-2">
               <label class="grid"><span class="label">Banner Text</span><input id="dtBanner" class="input" /></label>
               <label class="grid"><span class="label">Featured Product IDs (comma)</span><input id="dtFeatured" class="input" /></label>
@@ -168,6 +267,30 @@
             <div class="mt-2">
               <button id="saveDisplay" class="btn primary">Save</button>
             </div>
+          </div>
+        </section>
+      </section>
+
+      <!-- Categories -->
+      <section id="panel-categories" class="panel">
+        <h2 class="page-title">Categories</h2>
+        <section class="card">
+          <div class="body">
+            <div class="toolbar">
+              <button id="refreshCategories" class="btn">Refresh</button>
+              <button id="deleteSelectedCategories" class="btn danger hidden">Delete selected</button>
+            </div>
+            <div id="categoryTableWrap"></div>
+          </div>
+        </section>
+      </section>
+
+      <!-- Modifiers stub -->
+      <section id="panel-modifiers" class="panel">
+        <h2 class="page-title">Modifiers</h2>
+        <section class="card">
+          <div class="body">
+            <p class="lead">Create options and modifier groups — coming soon.</p>
           </div>
         </section>
       </section>
@@ -196,12 +319,68 @@
         <h2 class="page-title">Products</h2>
         <section class="card">
           <div class="body">
-            <h3>Catalog Management</h3>
-            <p class="lead">Create Categories, Products, and Modifiers, with images and pricing. Coming soon.</p>
+            <div class="toolbar">
+              <label class="grid" style="max-width:280px;">
+                <span class="label">Category</span>
+                <select id="prodCategory" class="select"><option value="">All</option></select>
+              </label>
+              <button id="refreshProducts" class="btn">Refresh</button>
+              <button id="deleteSelectedProducts" class="btn danger hidden">Delete selected</button>
+              <button id="newProductBtn" class="btn primary">New Product</button>
+            </div>
+            <div id="productTableWrap"></div>
           </div>
         </section>
       </section>
     </main>
+  </div>
+
+  <!-- Product Modal -->
+  <div id="productModal" class="modal-backdrop" aria-hidden="true">
+    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="productModalTitle">
+      <div class="header">
+        <div class="title" id="productModalTitle">Product</div>
+        <button id="productModalClose" class="btn icon ghost" aria-label="Close">✕</button>
+      </div>
+      <div class="content">
+        <div class="row cols-2">
+          <label class="grid">
+            <span class="label">SKU</span>
+            <input id="prodFormSku" class="input" placeholder="Unique SKU (defaults to generated)" />
+          </label>
+          <label class="grid">
+            <span class="label">Name</span>
+            <input id="prodFormName" class="input" />
+          </label>
+        </div>
+        <div class="row cols-2">
+          <label class="grid">
+            <span class="label">Category</span>
+            <select id="prodFormCategory" class="select"></select>
+          </label>
+          <label class="grid">
+            <span class="label">Price (KWD)</span>
+            <input id="prodFormPrice" type="number" step="0.001" min="0" class="input" />
+          </label>
+        </div>
+        <div class="row">
+          <label class="grid">
+            <span class="label">Image URL</span>
+            <input id="prodFormImageUrl" class="input" placeholder="https://... or /public/images/products/..." />
+          </label>
+        </div>
+        <div class="row">
+          <label class="switch-row">
+            <span class="label">Active</span>
+            <input id="prodFormActive" type="checkbox" class="switch" />
+          </label>
+        </div>
+      </div>
+      <div class="footer">
+        <button id="productModalCancel" class="btn">Cancel</button>
+        <button id="productModalSave" class="btn primary">Save</button>
+      </div>
+    </div>
   </div>
 
   <script src="/public/admin/admin.js"></script>
