--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -10,18 +10,22 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
 </head>
 <body>
-  <main style="max-width:520px;margin:48px auto;">
-    <h2>Koobs Admin Login</h2>
-    <p>Sign in with Email/Password or Google. After sign-in, you'll be redirected to Admin and your ID token will be used automatically.</p>
-    <div class="grid">
-      <label>Email <input id="email" type="email" /></label>
-      <label>Password <input id="password" type="password" /></label>
-    </div>
-    <div class="row">
-      <button id="emailSignIn">Sign in with Email</button>
-      <button id="googleSignIn">Sign in with Google</button>
-    </div>
-    <p id="msg"></p>
+  <main style="max-width:560px;margin:48px auto;padding:0 16px;">
+    <section class="card">
+      <div class="body">
+        <h2 class="page-title" style="margin-bottom:8px;">Admin Login</h2>
+        <p class="lead">Sign in with Email/Password or Google. After sign‑in, you’ll be redirected to Admin.</p>
+        <div class="grid cols-2 mt-3">
+          <label class="grid"><span class="label">Email</span><input id="email" class="input" type="email" /></label>
+          <label class="grid"><span class="label">Password</span><input id="password" class="input" type="password" /></label>
+        </div>
+        <div class="toolbar">
+          <button id="emailSignIn" class="btn primary">Sign in with Email</button>
+          <button id="googleSignIn" class="btn">Sign in with Google</button>
+          <span id="msg" class="chip" style="display:none"></span>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script>
@@ -35,7 +39,7 @@
     const auth = firebase.auth();
 
     const msg = document.getElementById('msg');
-    function setMsg(t){ msg.textContent = t; }
+    function setMsg(t){ msg.style.display = t ? 'inline-flex' : 'none'; msg.textContent = t; }
 
     document.getElementById('emailSignIn').onclick = async () => {
       try {
