--- a/public/cashier.html
+++ b/public/cashier.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/public/css/cashier.css?v=1.0.7">
+  <script src="/public/js/device-activation.js?v=1.0.20" data-role="cashier" defer></script>
 </head>
 <body>
   <header class="topbar">
