--- a/login/index.html
+++ b/login/index.html
@@ -6,41 +6,79 @@
     <title>OrderTech — Admin Login</title>
     <link rel="stylesheet" href="/css/admin.css" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <style>
+      /* Scoped tweaks for /login/ only */
+      body[data-page='login'] .card > .body { padding: 20px; }
+      body[data-page='login'] .input { background: #F9FAFB; border-color: #E5E7EB; min-height: 44px; }
+      body[data-page='login'] #emailSignIn.btn.primary { background:#6D28D9; border-color:#6D28D9; }
+      body[data-page='login'] #emailSignIn.btn.primary:hover { filter: brightness(0.98); }
+      body[data-page='login'] .lead { color: var(--subtle); }
+      body[data-page='login'] .page-title { font-size: 18px; line-height: 1.2; }
+    </style>
     <script src="/config.js?v=2"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
   </head>
-  <body>
-    <main style="max-width:620px;margin:48px auto;padding:0 16px;">
-      <section class="card">
+  <body data-page="login">
+    <main style="max-width:460px;margin:120px auto;padding:0 16px;">
+      <div style="display:grid;place-items:center;margin-bottom:28px;">
+        <img src="/images/OrderTech.png" onerror="this.onerror=null;this.src='/favicon.ico';" alt="OrderTech" style="width:100px;height:100px;object-fit:contain;border-radius:8px;" />
+      </div>
+      <div style="text-align:center;margin-bottom:8px;">
+        <h2 class="page-title" style="margin:0;">Login To Your Account</h2>
+      </div>
+      <div id="statusWrap" style="display:flex;justify-content:center;margin:10px 0;">
+        <span id="msg" class="chip" style="display:none"></span>
+      </div>
+      <section class="card" style="width:min(350px,100%);margin:0 auto;">
         <div class="body">
-          <div style="display:grid;place-items:center;margin-bottom:12px;">
-            <img src="/images/avatar.jpg" onerror="this.onerror=null;this.src='/favicon.ico';" alt="Logo" style="height:48px;object-fit:cover;border-radius:12px;" />
-          </div>
-          <h2 class="page-title" style="margin-bottom:8px;">Admin Login</h2>
-          <p class="lead">Sign in with Google or Email/Password. For email sign-in, you must verify your email first.</p>
-          <div class="toolbar" style="flex-wrap:wrap;gap:8px;margin-top:12px;margin-bottom:8px;">
-            <button id="googleSignIn" class="btn" style="background:#fff;border-color:#d1d5db;display:inline-flex;align-items:center;gap:8px;">
-              <span>Continue with Google</span>
-            </button>
-          </div>
-          <div class="grid cols-2 mt-3">
+          <div class="grid mt-3">
             <label class="grid"><span class="label">Email</span><input id="email" class="input" type="email" autocomplete="username email" /></label>
             <label class="grid"><span class="label">Password</span><input id="password" class="input" type="password" autocomplete="current-password" /></label>
-          </div>
-          <div class="toolbar" style="flex-wrap:wrap;gap:8px;">
-            <button id="emailSignIn" class="btn primary">Sign in with Email</button>
-            <button id="emailSignUp" class="btn">Create account</button>
-            <button id="resendVerify" class="btn ghost">Resend verification</button>
-            <button id="continueBtn" class="btn primary" style="display:none">Continue to dashboard</button>
-          </div>
-          <div style="margin-top:8px;display:flex;gap:8px;align-items:center;flex-wrap:wrap;">
-            <span id="msg" class="chip" style="display:none"></span>
-            <span id="hint" class="muted">After sign up, check your email for a verification link.</span>
+            <button id="emailSignIn" class="btn primary" style="background:#6D28D9;border-color:#6D28D9;width:100%;">Log In</button>
           </div>
         </div>
       </section>
+      <div style="margin-top:12px; text-align:left; width:min(350px,100%); margin-left:auto; margin-right:auto;">
+        <a id="forgotLink" href="#" class="link" style="text-decoration:underline;">Forgot password?</a>
+        <span class="muted"> • </span>
+        <a id="resendLink" href="#" class="link" style="text-decoration:underline;">Resend verification</a>
+      </div>
+      <div class="muted" style="margin-top:6px; text-align:left; width:min(350px,100%); margin-left:auto; margin-right:auto;">
+        Don’t have an account? <a id="signUpLink" href="/signup/" class="link" style="text-decoration:underline;">Signup</a>
+      </div>
+      <div style="margin-top:20px; display:flex; justify-content:flex-start; width:min(350px,100%); margin-left:auto; margin-right:auto;">
+        <button id="googleSignIn" class="btn" style="background:#fff;border-color:#d1d5db;display:inline-flex;align-items:center;gap:10px;">
+          <span aria-hidden="true" style="display:inline-flex;">
+            <svg width="18" height="18" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+              <path fill="#FFC107" d="M43.6 20.5H42V20H24v8h11.3C33.7 32.6 29.3 36 24 36c-6.6 0-12-5.4-12-12s5.4-12 12-12c3 0 5.7 1.1 7.8 3l5.7-5.7C34.2 6.3 29.4 4 24 4 16.1 4 9.3 8.5 6.3 14.7z"/>
+              <path fill="#FF3D00" d="M6.3 14.7l6.6 4.8C14.8 16.7 19.1 12 24 12c3 0 5.7 1.1 7.8 3l5.7-5.7C34.2 6.3 29.4 4 24 4 16.1 4 9.3 8.5 6.3 14.7z"/>
+              <path fill="#4CAF50" d="M24 44c5.2 0 9.9-2 13.4-5.2l-6.2-5.2C29.3 36 26.8 37 24 37c-5.2 0-9.6-3.3-11.2-8L6.3 34c3 6.2 9.8 10 17.7 10z"/>
+              <path fill="#1976D2" d="M43.6 20.5H42V20H24v8h11.3c-1 2.9-3.3 5.2-6.1 6.4l6.2 5.2C37.7 37.6 40 32.4 40 26c0-1.9-.2-3.4-.4-5.5z"/>
+            </svg>
+          </span>
+          <span>Login with Google</span>
+        </button>
+      </div>
     </main>
+
+    <!-- Forgot Password Modal -->
+    <div id="forgotModal" class="modal-backdrop" aria-hidden="true" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,.5);z-index:1000;align-items:center;justify-content:center;">
+      <div class="modal" role="dialog" aria-modal="true" aria-labelledby="forgotTitle" style="background:#fff;border-radius:12px;padding:16px;width:min(420px,90vw);box-shadow:0 10px 30px rgba(0,0,0,.2)">
+        <div class="header" style="display:flex;align-items:center;justify-content:space-between;gap:8px;">
+          <div id="forgotTitle" class="title" style="font-weight:700;">Reset password</div>
+          <button id="resetCancel" class="btn icon ghost" aria-label="Close">✕</button>
+        </div>
+        <div class="content" style="margin-top:8px;">
+          <label class="grid"><span class="label">Email</span>
+            <input id="resetEmail" type="email" class="input" placeholder="you@example.com" autocomplete="email" />
+          </label>
+        </div>
+        <div class="footer" style="margin-top:12px;display:flex;justify-content:flex-end;gap:8px;">
+          <button id="resetSend" class="btn primary">Send reset link</button>
+        </div>
+      </div>
+    </div>
 
     <script>
       // Initialize Firebase from /config.js (server-populated)
@@ -82,8 +120,35 @@
       async function onSignedIn() {
         clearNoAutoForward();
         try { const tok = await auth.currentUser.getIdToken(/*forceRefresh*/ true); localStorage.setItem('ID_TOKEN', tok); } catch {}
-        // default landing — products
-        location.href = '/products/';
+        // Post-login routing:
+        // 1) If user has no tenants, send them to complete profile and then start trial
+        // 2) If exactly one tenant, go straight to Admin for that tenant
+        // 3) If multiple tenants, go to Admin landing (tenant selector)
+        try {
+          const tok = await auth.currentUser.getIdToken(true);
+          const my = await fetch('/admin/my/tenants', { headers: { Authorization: 'Bearer ' + tok } }).then(r => r.ok ? r.json() : []);
+          const arr = Array.isArray(my) ? my : [];
+          if (arr.length === 0) {
+            // If we have prefilled profile, save it quickly, then go to profile for edits and onward
+            try {
+              const p = JSON.parse(localStorage.getItem('PREFILL_PROFILE')||'{}');
+              if (p && (p.full_name || p.mobile)) {
+                await fetch('/auth/profile', { method:'POST', headers: { 'Content-Type':'application/json', Authorization: 'Bearer ' + tok }, body: JSON.stringify(p) });
+              }
+            } catch {}
+            location.href = '/profile/?next=' + encodeURIComponent('/start-trial/');
+            return;
+          }
+          if (arr.length === 1) {
+            const t = arr[0];
+            location.href = '/products/?tenant=' + encodeURIComponent(t.id);
+            return;
+          }
+          location.href = '/products/';
+        } catch {
+          // Fallback
+          location.href = '/products/';
+        }
       }
 
       function needFirebaseConfig(){
@@ -187,7 +252,7 @@
         }
       }
 
-      // Google sign-in
+// Google sign-in
       async function signInGoogle(){
         if (!(await ensureAuthReady())) return setMsg('Firebase config missing. Set FIREBASE_API_KEY and FIREBASE_AUTH_DOMAIN.');
         try {
@@ -196,29 +261,46 @@
           await auth.signInWithPopup(provider);
           await onSignedIn();
         } catch (e) {
-          console.warn('Google popup sign-in failed, trying redirect...', e?.code || e);
           try {
             const provider = new firebase.auth.GoogleAuthProvider();
             provider.setCustomParameters({ prompt: 'select_account' });
             await auth.signInWithRedirect(provider);
           } catch (e2) {
-            console.error('Google redirect sign-in failed:', e2);
-            setMsg(`Google sign-in failed: ${e2?.code || ''} ${e2?.message || ''}`.trim());
+            setMsg('Google sign-in failed. Try email/password.');
           }
         }
       }
-
-      document.getElementById('googleSignIn').onclick = signInGoogle;
-      document.getElementById('emailSignIn').onclick = signInEmail;
-      document.getElementById('emailSignUp').onclick = signUpEmail;
-      document.getElementById('resendVerify').onclick = resendVerification;
-      document.getElementById('continueBtn').onclick = async () => {
-        if (!ensureFirebaseInitialized()) return setMsg('Firebase config missing. Set FIREBASE_API_KEY and FIREBASE_AUTH_DOMAIN.');
-        await onSignedIn();
+      const btnGoogle = document.getElementById('googleSignIn'); if (btnGoogle) btnGoogle.onclick = signInGoogle;
+      const btnEmail = document.getElementById('emailSignIn'); if (btnEmail) btnEmail.onclick = signInEmail;
+      const signUpLink = document.getElementById('signUpLink'); if (signUpLink) signUpLink.onclick = (e)=>{ e.preventDefault(); location.href='/signup/'; };
+      const forgotLink = document.getElementById('forgotLink'); if (forgotLink) forgotLink.onclick = (e)=>{ e.preventDefault(); openForgotModal(); };
+      const resendLink = document.getElementById('resendLink'); if (resendLink) resendLink.onclick = async (e)=>{ e.preventDefault();
+        const email = (emailEl?.value||'').trim();
+        if (!email) { setMsg('Enter your email, then click Resend.'); return; }
+        try {
+          const r = await fetch('/auth/send-verification-email', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ email }) });
+          if (r.ok) {
+            try { const j = await r.json(); if (j && j.link) { setMsg('Email sending not configured here. Open the verification link from the page.'); window.open(j.link, '_blank'); } else { setMsg('Verification email sent.'); } }
+            catch { setMsg('Verification email sent.'); }
+          } else {
+            setMsg('Could not resend.');
+          }
+        } catch { setMsg('Could not resend.'); }
       };
 
       // Enter key submits sign in
       document.addEventListener('keydown', (e)=>{ if(e.key==='Enter'){ signInEmail(); }});
+
+      // Show status messages based on URL params (no top banner)
+      try {
+        const params = new URLSearchParams(window.location.search || '');
+        if (params.get('verify_sent') === '1') {
+          setMsg('Verification email sent. Please verify your email, then sign in.');
+        }
+        if (params.get('logged_out') === '1') {
+          setMsg('Logged Out Successfully!');
+        }
+      } catch {}
 
 
       // Handle email verification deep link (mode=verifyEmail & oobCode)
@@ -247,9 +329,26 @@
         } catch {}
       })();
 
+      // Forgot password modal
+      function openForgotModal(){
+        const m = document.getElementById('forgotModal'); if (!m) return; m.style.display='flex';
+        const inp = document.getElementById('resetEmail'); if (inp) { inp.value = (document.getElementById('email')?.value||'').trim(); inp.focus(); }
+      }
+      function closeForgotModal(){ const m = document.getElementById('forgotModal'); if (m) m.style.display='none'; }
+      async function sendReset(){
+        if (!(await ensureAuthReady())) return setMsg('Firebase config missing. Set FIREBASE_API_KEY and FIREBASE_AUTH_DOMAIN.');
+        const el = document.getElementById('resetEmail'); const email=(el?.value||'').trim();
+        if (!email) return setMsg('Enter your email to reset password.');
+        try { await auth.sendPasswordResetEmail(email); setMsg('Password reset email sent.'); closeForgotModal(); }
+        catch(e){ setMsg('Could not send reset email.'); }
+      }
+
       // Handle Google redirect result if popup was blocked
       (async () => {
         try {
+          // Wire modal buttons after DOM ready
+          document.getElementById('resetCancel')?.addEventListener('click', (e)=>{ e.preventDefault(); closeForgotModal(); });
+          document.getElementById('resetSend')?.addEventListener('click', (e)=>{ e.preventDefault(); sendReset(); });
           if (!(await ensureAuthReady())) return;
           const result = await auth.getRedirectResult();
           if (result && result.user) {
@@ -270,8 +369,8 @@
             // Suppress any redirect shortly after a sign-up attempt
             if (isNoAutoForward()) return;
             if (user.emailVerified) {
-              setMsg('You are signed in. Click Continue to proceed.');
-              try { document.getElementById('continueBtn').style.display = 'inline-flex'; } catch {}
+              // Do not auto-redirect from the login page; keep user here
+              try { await auth.signOut(); } catch {}
               return;
             }
             // Keep them on the page if unverified
